tests/type_check/declaration/declaration_invalid.err.expected
error: at 25:32: [TC-InvalidDeclaredType] In struct 'StructFieldUndeclared', field 'x': Use of undeclared type 'Nope'
    |
 25 | struct StructFieldUndeclared { x: Nope }
    |                                ^^^^^^^
error: at 31:30: [TC-InvalidDeclaredType] In enum 'EnumVariantUndeclared', variant 'A': Use of undeclared type 'Nope'
    |
 31 | enum EnumVariantUndeclared { A: Nope }
    |                              ^^^^^^^
error: at 37:24: [TC-InvalidDeclaredType] In function 'fn_param_undeclared', parameter 'x': Use of undeclared type 'Nope'
    |
 37 | fn fn_param_undeclared(x: Nope) { entry: return }
    |                        ^^^^^^^
error: at 44:35: [TC-InvalidDeclaredType] In function 'fn_param_undeclared_inside_ref', parameter 'x': Use of undeclared type 'Nope'
    |
 44 | fn fn_param_undeclared_inside_ref(x: &mut Nope) { entry: return }
    |                                   ^^^^^^^^^^^^
error: at 50:34: [TC-InvalidDeclaredType] In function 'fn_param_undeclared_inside_fn', parameter 'g': Use of undeclared type 'Nope'
    |
 50 | fn fn_param_undeclared_inside_fn(g: fn(Nope)) { entry: return }
    |                                  ^^^^^^^^^^^
error: at 56:28: [TC-InvalidDeclaredType] In function 'fn_local_undeclared', local 'x': Use of undeclared type 'Nope'
    |
 56 | fn fn_local_undeclared() { x: Nope; entry: return }
    |                            ^^^^^^^^
